Remove exposed API key (security fix)

--- a/restaurant-scheduler.html
+++ b/restaurant-scheduler.html
@@ -5341,7 +5341,7 @@
         // FIREBASE INTEGRATION
         // ============================================
         const firebaseConfig = {
-            apiKey: "AIzaSyCrBQKmHV9zzS6XUc3cleuIck2Xli30jQo",
+            apiKey: "YOUR_API_KEY_HERE",
             authDomain: "scheduler-d2be6.firebaseapp.com",
             projectId: "scheduler-d2be6",
             storageBucket: "scheduler-d2be6.firebasestorage.app",
